--- a/css/styles.css
+++ b/css/styles.css
@@ -289,6 +289,7 @@ img {
 
 nav {
   background-color: rgba(64, 64, 64, 0.97);
+  opacity: 0.95;
   height: 64px;
   width: 100%;
   position: fixed;
@@ -296,18 +297,47 @@ nav {
   z-index: 10;
 }
 
-.nav_logo {
-  float: left;
+.nav-logo {
   color: #FFF;
   display: inline-block;
-  margin-top: 16px;
+  margin: 14px 0;
   width: 40px;
+  transition: all 0.3s ease;
+  -webkit-transition: all 0.3s ease;
 }
 
-.nav_name {
+@media (max-width: 768px) {
+  .nav-logo {
+    margin: 0;
+  }
+}
+
+.nav-logo:hover {
+  -webkit-transform: scale(1.2);
+          transform: scale(1.2);
+  transition: all 0.3s ease;
+  -webkit-transition: all 0.3s ease;
+}
+
+.nav-link {
   display: inline-block;
-  margin: 15px 0 0 10px;
-  color: #FFF;
+  margin-left: 12px;
+  margin-top: 2px;
+  color: rgba(255, 255, 255, 0.6);
+  font-size: 1.25rem;
+  padding: 20px 8px;
+}
+
+.nav-link:hover {
+  color: #ffffff;
+  transition: all 0.3s ease;
+  -webkit-transition: all 0.3s ease;
+}
+
+@media (max-width: 768px) {
+  .nav-link-container {
+    display: none;
+  }
 }
 
 .intro {
@@ -519,6 +549,7 @@ nav {
   position: fixed;
   top: 0;
   width: 280px;
+  padding: 0 30px;
   z-index: 20;
   transition: all 0.3s ease;
   -webkit-transition: all 0.3s ease;
@@ -531,8 +562,7 @@ nav {
 }
 
 .sidebar ul {
-  margin-top: 30px;
-  padding: 0 25px;
+  margin: 30px 0;
 }
 
 .sidebar li {
@@ -602,10 +632,12 @@ nav {
   top: 10px;
   width: 40px;
   z-index: 30;
+  display: none;
 }
 
 @media (max-width: 768px) {
   .burger {
+    display: inline-block;
     top: -5px;
     right: 10px;
     margin: 1rem 1.5rem;
