--- a/css/styles.scss
+++ b/css/styles.scss
@@ -298,6 +298,7 @@ img{
 
 nav {
   background-color: $brand-sidebar-dark;
+  opacity: 0.95;
   height: 64px;
   width: 100%;
   position: fixed;
@@ -305,17 +306,36 @@ nav {
   z-index: 10;
 }
 .nav {
-  &_logo {
-    float: left;
+  &-logo {
     color: $brand-light;
     display: inline-block;
-    margin-top: 16px;
-    width: 40px
+    margin: 14px 0;
+    width: 40px;
+    @include transition;
+    @include respond-to('mobile') {
+      margin: 0;
+    }
+    &:hover{
+      transform: scale(1.2);
+      @include transition;
+    }
   }
-  &_name {
+  &-link {
     display: inline-block;
-    margin: 15px 0 0 10px;
-    color: $brand-light;
+    margin-left: 12px;
+    margin-top: 2px;
+    color: rgba(255,255,255,0.6);
+    font-size: 1.25rem;
+    padding: 20px 8px;
+    &:hover {
+      color: #ffffff;
+      @include transition
+    }
+    &-container {
+      @include respond-to('mobile') {
+        display: none;
+      }
+    }
   }
 }
 
@@ -510,14 +530,14 @@ nav {
   position:fixed;
   top:0;
   width:$sidebar-width;
+  padding: 0 30px;
   z-index:20;
   @include transition;
   @include respond-to('mobile') {
     width: 100%;
   }
   ul {
-    margin-top: 30px;
-    padding: 0 25px;
+    margin: 30px 0;
   }
   li {
     padding-bottom: 12px;
@@ -575,7 +595,9 @@ nav {
   top: 10px;
   width: 40px;
   z-index: 30;
+  display: none;
   @include respond-to('mobile') {
+    display: inline-block;
     top: -5px;
     right: 10px;
     margin:1rem 1.5rem;
