--- a/css/styles.scss
+++ b/css/styles.scss
@@ -332,6 +332,7 @@ nav {
       @include transition
     }
     &-container {
+      text-align: right;
       @include respond-to('mobile') {
         display: none;
       }
