--- a/css/styles.scss
+++ b/css/styles.scss
@@ -349,14 +349,15 @@ nav {
   padding:4rem 0;
   text-shadow: 0 4px 6px rgba(51, 51, 51, 0.2);
   @include respond-to('mobile'){
-    min-height: 400px;
+    min-height: 100px;
+    padding: 2rem 0;
   }
   h1 {
     color: $brand-light;
     margin-top: 140px;
     @include respond-to('mobile') {
-      font-size: 2.3rem;
-      line-height: 3rem;
+      font-size: 2rem;
+      line-height: 2.75rem;
       margin-top: 90px;
     }
   }
@@ -530,17 +531,14 @@ nav {
   bottom:0;
   box-shadow:1px 0 4px 0 $base-box-shadow-color;
   height:100%;
-  right:0;
+  right:-40rem;
   padding-top: 50px;
   position:fixed;
   top:0;
-  width:$sidebar-width;
+  width:100%;
   padding: 0 30px;
   z-index:20;
   @include transition;
-  @include respond-to('mobile') {
-    width: 100%;
-  }
   ul {
     margin: 30px 0;
   }
@@ -573,13 +571,8 @@ nav {
   }
 }
 
-.sidebar-hidden{
-  right:(-$sidebar-width)-20px;
-  @include transition;
-  @include respond-to('mobile') {
-    width: 50%;
-    right: -50%;
-  }
+.sidebar-expanded{
+  right: 0;
 }
 
 .logo-container{
@@ -601,6 +594,7 @@ nav {
   width: 40px;
   z-index: 30;
   display: none;
+  @include transition;
   @include respond-to('mobile') {
     display: inline-block;
     top: -5px;
