--- a/css/styles.scss
+++ b/css/styles.scss
@@ -531,14 +531,18 @@ nav {
   bottom:0;
   box-shadow:1px 0 4px 0 $base-box-shadow-color;
   height:100%;
-  right:-40rem;
+  right:-80rem;
   padding-top: 50px;
   position:fixed;
   top:0;
   width:100%;
   padding: 0 30px;
   z-index:20;
+  display: none;
   @include transition;
+  @include respond-to('mobile') {
+    display: block;
+  }
   ul {
     margin: 30px 0;
   }
