--- a/css/styles.scss
+++ b/css/styles.scss
@@ -283,6 +283,12 @@ img{
   padding:4rem 0;
 }
 
+.work {
+  @include respond-to('mobile') {
+    padding: 2rem 0;
+  }
+}
+
 .section_title {
   margin-bottom: 25px;
 }
@@ -469,6 +475,9 @@ nav {
   &_header {
     margin-top: 120px;
     padding-bottom: 60px;
+    @include respond-to('mobile') {
+      padding-bottom: 0px;
+    }
   }
   &_title {
     color: $brand-dark;
@@ -519,7 +528,7 @@ nav {
 //Sidebar
 
 .sidebar{
-  background:rgba(255,255,255,0.98);
+  background:rgba(255,255,255,0.99999);
   color: $brand-dark;
   bottom:0;
   box-shadow:1px 0 4px 0 $base-box-shadow-color;
