--- a/css/styles.css
+++ b/css/styles.css
@@ -365,8 +365,8 @@ nav {
 
 @media (max-width: 768px) {
   .intro h1 {
-    font-size: 2rem;
-    line-height: 2.75rem;
+    font-size: 1.8rem;
+    line-height: 2.2rem;
     margin-top: 90px;
   }
 }
@@ -418,7 +418,7 @@ nav {
 
 .w1 {
   background-image: url("../img/voiceopssite-cover.jpg");
-  background-position: center;
+  background-position: top;
 }
 
 .w2 {
