--- a/css/styles.css
+++ b/css/styles.css
@@ -412,6 +412,10 @@ nav {
   color: #9aa4ad;
 }
 
+.w6 {
+  background-image: url("../img/attendance-dayview.jpg");
+}
+
 .w5 {
   background-image: url("../img/activity-context.png");
 }
